# take-home

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt  test_predictions.py
app/: main.py
data/raw/: test_patients.csv
models/: rf_best_estimator.pkl
notebooks/: take_home_project.ipynb
processed/: research.csv
take_home/data/: process_data.py
take_home/models/: classification_pipelines.py
take_home/visualizations/: stat_plots.py
tests/: test_base_etl.py
