[tool.poetry]
name = "take-home"
version = "0.1.0"
description = ""
authors = ["Robert Annand <robertannand@gmail.com>"]
readme = "README.md"
packages = [{include = "take_home"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
scikit-learn = "^1.1.2"
click = "^8.1.3"
shap = "^0.41.0"
pytest = "^7.1.3"
fastapi = "^0.82.0"
requests = "^2.28.1"
nbconvert = "^7.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
